# VISA

./: .gitignore  .travis.yml  CMakeLists.txt  Licence.md  Makefile  README.md  configure.sh  exportMPLcmap.py  visaConfig.cmake
Examples/: exLinePlot.cpp  exMexicanHat.cpp  exSincFilter.cpp  exSmallMatrix.cpp  overlay.cpp  plot1DFiltered.py  waveOnMembrane.cpp
include/: armaGetter.hpp  colormaps.hpp  fifoBuffer.hpp  gaussianKernel.hpp  lowPassFilter.hpp  lowPassFilter.tpp  sincFilter.hpp  sincFilter.tpp  visa.hpp  visualizer.hpp  visualizer1D.hpp  windowHandler.hpp
src/: CMakeLists.txt  colormaps.cpp  fifoBuffer.cpp  gaussianKernel.cpp  lowPassFilter.cpp  sincFilter.cpp  visualizer.cpp  visualizer1D.cpp  windowHandler.cpp
unittest/: CMakeLists.txt  maintest.cpp  openMPTest.cpp  testFifo.cpp
